--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -6,21 +6,10 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 </head>
 <body>
-    <span th:text = "${'Hello mr. ' +name}"></span>
-<table>
-    <thead>
-    <tr>
-        <th>column1</th>
-        <th>column2</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="item, iterStat : ${animals}"
-        th:style="${iterStat.odd} ? 'font-weight: bold;'">
-        <td th:text="${iterStat.index}+1" ></td>
-        <td th:text="${item.name}"></td>
-    </tr>
-    </tbody>
-</table>
+<!--    <span th:text = "${'Hello mr. ' +name}"></span>-->
+    <div class="container-fluid text-center">
+        <h1>Welcome ;)</h1>
+        <a th:href="@{/students}" class="header">Manage students</a>
+    </div>
 </body>
 </html>
