add students.html but config till now is not work properly ((

--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -34,6 +34,12 @@
                         <td th:text="${item.getLastName()}"></td>
                         <td th:text="${item.getINN()}"></td>
                         <td th:text="${item.geteMail()}"></td>
+                        <td>[[${item.geteMail()}]]</td>
+                        <td>
+                            <a th:href="@{/students/edit(id=${item.getId})}">Edit</a>
+                            <a th:href="@{/students/delete(id=${item.getId})}">Delete</a>
+                            <a th:href="@{students/details(id=${item.getId})}">Details</a>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
