--- a/src/main/resources/templates/studentForm.html
+++ b/src/main/resources/templates/studentForm.html
@@ -25,12 +25,13 @@
 
           th:object="${item}" method="post" class="form-horizontal">
 
-        <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon">
-                <i class="glyphicon glyphicon-user"></i>
-            </span>
-            <input th:field="*{id}" placeholder="id (*)" class="form-control" >
-        </div>
+<!--        <div th:hidden="${id == null}" style="margin-bottom: 25px" class="input-group">-->
+<!--            <span class="input-group-addon">-->
+<!--                <i class="glyphicon glyphicon-user"></i>-->
+<!--            </span>-->
+<!--        <input th:field="*{id}" placeholder="id (*)" class="form-control">-->
+        <input type="hidden" th:field="*{id}"/>
+<!--        </div>-->
 
         <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon">
