--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -40,6 +40,7 @@
                         <td th:text="${item.getINN()}"></td>
 <!--                        <td th:text="${item.geteMail()}"></td>-->
                         <td>[[${item.geteMail()}]]</td>
+                        <td th:if="${item.group!=null}">[[${item.getGroup().getName()}]]</td>
                         <td>
                             <a th:href="@{/students/addEditItem}">Add</a>
                             <a th:href="@{/students/addEditItem(id=${item.getId})}">Edit</a>
