add native query into repository add delete meth to table with dependency from other table

--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -24,28 +24,18 @@
                     <thead>
                     <tr>
                         <th>№</th>
-                        <th>first name</th>
-                        <th>last name</th>
-                        <th>Inn</th>
-                        <th>e-mail</th>
-                        <th>group</th>
-                        <th>Action</th>
+                        <th>Name</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="item, iterStat : ${listOfStudents}"
+                    <tr th:each="item, iterStat : ${listOfItems}"
                         th:style="${iterStat.odd} ? 'font-weight: bold;'">
                         <td th:text="${iterStat.index}+1" ></td>
-                        <td th:text="${item.getFirstName()}"></td>
-                        <td th:text="${item.getLastName()}"></td>
-                        <td th:text="${item.getINN()}"></td>
-<!--                        <td th:text="${item.geteMail()}"></td>-->
-                        <td>[[${item.geteMail()}]]</td>
-                        <td th:text="${ item.getGroup() != null ? item.getGroup().getName() : ''}"></td>
+                        <td th:text="${item.getName()}"></td>
                         <td>
-                            <a th:href="@{/students/addEditItem}">Add</a>
-                            <a th:href="@{/students/addEditItem(id=${item.getId})}">Edit</a>
-                            <a th:href="@{/students/delete(id=${item.getId})}">Delete</a>
+                            <a th:href="@{/groups/addEditItem}">Add</a>
+                            <a th:href="@{/groups/addEditItem(id=${item.getId})}">Edit</a>
+                            <a th:href="@{/groups/delete(id=${item.getId})}">Delete</a>
 <!--                            <a th:href="@{students/details(id=${item.getId})}">Details</a>-->
                         </td>
                     </tr>
