--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -12,6 +12,9 @@
 <!--    <span th:text = "${'Hello mr. ' +name}"></span>-->
     <div class="container-fluid text-center">
         <h1>Welcome ;)</h1>
+        <a th:href="@{/groups}" class="header">Manage groups of students</a>
+        <br>
+        <br>
         <a th:href="@{/students}" class="header">Manage students</a>
     </div>
 
