--- a/src/main/resources/templates/marks.html
+++ b/src/main/resources/templates/marks.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Start Title</title>
+    <title>Marks journal</title>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>-->
 <!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>-->
@@ -10,13 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 </head>
 <body>
-<!--    <span th:text = "${'Hello mr. ' +name}"></span>-->
-
-<!--    <div class="container-fluid text-center">-->
-<!--        <h1>Welcome ;)</h1>-->
-<!--        <a th:href="@{/start}" class="header">start page</a>-->
-<!--    </div>-->
 <header th:insert="fragments/layouts.html :: myHeader1"> </header>
+
 
     <div class="container">
         <div class="row">
@@ -25,14 +20,21 @@
                     <thead>
                     <tr>
                         <th>№</th>
-                        <th>Name</th>
+                        <th>Student</th>
+                        <th>Subject</th>
+                        <th>Date</th>
+                        <th>Mark</th>
+                        <th>Action</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="item, iterStat : ${listOfItems}"
                         th:style="${iterStat.odd} ? 'font-weight: bold;'">
                         <td th:text="${iterStat.index}+1" ></td>
-                        <td th:text="${item.getName()}"></td>
+                        <td th:text="${item.getStudent()}"></td>
+                        <td th:text="${item.getSubject().getName()}"></td>
+                        <td th:text="${item.getDate()}"></td>
+                        <td th:text="${item.getMark()}"></td>
                         <td>
                             <div class="dropend">
                                 <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
@@ -40,24 +42,36 @@
                                     Action
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" th:href="@{/groups/addEditItem}">Add</a> </li>
-                                    <li><a class="dropdown-item" th:href="@{/groups/addEditItem(id=${item.getId})}">Edit</a> </li>
-                                    <li><a class="dropdown-item" th:href="@{/groups/delete(id=${item.getId})}">Delete</a> </li>
+                                    <li><a class="dropdown-item" th:href="@{/marks/details}">Details</a> </li>
+                                    <li><a class="dropdown-item" th:href="@{/marks/addEditItem(id=${item.getId})}">Edit</a> </li>
+                                    <li><a class="dropdown-item" th:href="@{/marks/delete(id=${item.getId})}">Delete</a> </li>
                                 </ul>
                             </div>
-
-<!--                            <a th:href="@{/groups/addEditItem}">Add</a>-->
-<!--                            <a th:href="@{/groups/addEditItem(id=${item.getId})}">Edit</a>-->
-<!--                            <a th:href="@{/groups/delete(id=${item.getId})}">Delete</a>-->
+<!--                            <a th:href="@{/students/addEditItem}">Add</a>-->
+<!--                            <a th:href="@{/students/addEditItem(id=${item.getId})}">Edit</a>-->
+<!--                            <a th:href="@{/students/delete(id=${item.getId})}">Delete</a>-->
 <!--                            <a th:href="@{students/details(id=${item.getId})}">Details</a>-->
                         </td>
                     </tr>
                     </tbody>
                 </table>
-                <a th:href="@{/groups/addEditItem}" class="btn btn-primary ">Add item</a>
+                <a th:href="@{/marks/addEditItem}" class="btn btn-primary ">Add item</a>
             </div>
         </div>
     </div>
+<!--<span>ggggggggggggggggggggggggggggg</span>-->
+<!--<div class="container">-->
+<!--    <div class="dropdown">-->
+<!--        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">-->
+<!--            Dropdown-->
+<!--        </button>-->
+<!--        <ul class="dropdown-menu">-->
+<!--            <li><button class="dropdown-item" type="button">Action</button></li>-->
+<!--            <li><button class="dropdown-item" type="button">Another action</button></li>-->
+<!--            <li><button class="dropdown-item" type="button">Something else here</button></li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--</div>-->
 
 </body>
 </html>
