--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -7,16 +7,22 @@
 </head>
 <body>
 
-<!--<header th:insert="fragments/layouts.html :: nameFragment1"> </header>-->
-
-<!--    <span th:text = "${'Hello mr. ' +name}"></span>-->
+<header th:insert="fragments/layouts.html :: myHeader1"> </header>
     <div class="container-fluid text-center">
         <h1>Welcome ;)</h1>
-        <a th:href="@{/groups}" class="header">Manage groups of students</a>
-        <br>
-        <br>
-        <a th:href="@{/students}" class="header">Manage students</a>
     </div>
+
+<!--    <span th:text = "${'Hello mr. ' +name}"></span>-->
+<!--    <div class="container-fluid text-center">-->
+<!--        <h1>Welcome ;)</h1>-->
+<!--        <a th:href="@{/groups}" class="header">Manage groups of students</a>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <a th:href="@{/subjects}" class="header">Manage subjects</a>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <a th:href="@{/students}" class="header">Manage students</a>-->
+<!--    </div>-->
 
 
     <footer th:insert="fragments/layouts.html :: footer"></footer>
