--- a/src/main/resources/templates/subjectForm.html
+++ b/src/main/resources/templates/subjectForm.html
@@ -2,18 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>work with Groups</title>
+    <title>work with subjects</title>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>-->
     <!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>-->
 
 </head>
 <body>
-<header th:insert="fragments/layouts.html :: myHeader1"> </header>
 <!--<div class="container-fluid text-center">-->
 <!--    <h1>Welcome ;)</h1>-->
 <!--    <a th:href="@{/start}" class="header">start page</a>-->
 <!--</div>-->
+<header th:insert="fragments/layouts.html :: myHeader1"> </header>
 
 <div class="container-fluid text-center">
     <h1 th:text="${item.id == null } ? 'Adding' : 'Editing'"></h1>
@@ -22,7 +22,7 @@
 
 <div class="container">
     <form th:object="${item}"
-          th:action="${item.getId() == null } ? '/groups/add' : '/groups/update'"
+          th:action="${item.getId() == null } ? '/subjects/add' : '/subjects/update'"
            method="post" class="form-horizontal">
 
         <input type="hidden" th:field="*{id}"/>
@@ -36,7 +36,7 @@
         <div class="form-group">
             <div class="col-sm-6 controls">
                 <button type="submit" class="btn btn-primary d-flex align-items-center" th:text="${item.getId() != null } ? 'Save ...' : 'Add'"> Add</button>
-                <a th:href="@{/groups}" class="btn btn-warning ">Cancel</a>
+                <a th:href="@{/subjects}" class="btn btn-warning ">Cancel</a>
             </div>
         </div>
     </form>
