--- a/src/main/resources/templates/subjects.html
+++ b/src/main/resources/templates/subjects.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Start Title</title>
+    <title>Subjects</title>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>-->
 <!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>-->
@@ -11,7 +11,6 @@
 </head>
 <body>
 <!--    <span th:text = "${'Hello mr. ' +name}"></span>-->
-
 <!--    <div class="container-fluid text-center">-->
 <!--        <h1>Welcome ;)</h1>-->
 <!--        <a th:href="@{/start}" class="header">start page</a>-->
@@ -40,21 +39,21 @@
                                     Action
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" th:href="@{/groups/addEditItem}">Add</a> </li>
-                                    <li><a class="dropdown-item" th:href="@{/groups/addEditItem(id=${item.getId})}">Edit</a> </li>
-                                    <li><a class="dropdown-item" th:href="@{/groups/delete(id=${item.getId})}">Delete</a> </li>
+                                    <li><a class="dropdown-item" th:href="@{/subjects/addEditItem}">Add</a> </li>
+                                    <li><a class="dropdown-item" th:href="@{/subjects/addEditItem(id=${item.getId})}">Edit</a> </li>
+                                    <li><a class="dropdown-item" th:href="@{/subjects/delete(id=${item.getId})}">Delete</a> </li>
                                 </ul>
                             </div>
 
-<!--                            <a th:href="@{/groups/addEditItem}">Add</a>-->
-<!--                            <a th:href="@{/groups/addEditItem(id=${item.getId})}">Edit</a>-->
-<!--                            <a th:href="@{/groups/delete(id=${item.getId})}">Delete</a>-->
+<!--                            <a th:href="@{/subjects/addEditItem}">Add</a>-->
+<!--                            <a th:href="@{/subjects/addEditItem(id=${item.getId})}">Edit</a>-->
+<!--                            <a th:href="@{/subjects/delete(id=${item.getId})}">Delete</a>-->
 <!--                            <a th:href="@{students/details(id=${item.getId})}">Details</a>-->
                         </td>
                     </tr>
                     </tbody>
                 </table>
-                <a th:href="@{/groups/addEditItem}" class="btn btn-primary ">Add item</a>
+                <a th:href="@{/subjects/addEditItem}" class="btn btn-primary ">Add item</a>
             </div>
         </div>
     </div>
