--- a/src/main/resources/templates/markForm.html
+++ b/src/main/resources/templates/markForm.html
@@ -6,11 +6,15 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>-->
     <!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>-->
-
+    <style>
+        .error {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 <div class="container-fluid text-center">
-    <h1 th:text="${message != null } ? ${message} : ''"></h1>
+<!--    <h1 th:text="${message != null } ? ${message} : ''"></h1>-->
 </div>
 <br>
 <div class="container-fluid text-center">
@@ -44,6 +48,9 @@
                 <option th:each="student : ${studentsList}" th:value="${student.id}" th:text="${student.toString()}"
                 th:selected="${item.getStudent()}"></option>
             </select>
+            <ul>
+                <li th:each="err : ${#fields.errors('student')}" th:text="${err}" class="error" />
+            </ul>
         </div>
 
         <div style="margin-bottom: 25px" class="mb-3">
@@ -52,11 +59,17 @@
                 <option th:each="subject : ${subjectList}" th:value="${subject.id}" th:text="${subject.getName()}"
                         th:selected="${item.getSubject()}"></option>
             </select>
+            <ul>
+                <li th:each="err : ${#fields.errors('subject')}" th:text="${err}" class="error" />
+            </ul>
         </div>
 
         <div style="margin-bottom: 25px" class="mb-3">
             <label for="date" class="form-label">Date</label>
             <input type="date" required id="date" th:field="*{date}" placeholder="day.month.year" class="form-control"/>
+            <ul>
+                <li th:each="err : ${#fields.errors('date')}" th:text="${err}" class="error" />
+            </ul>
         </div>
 
         <div style="margin-bottom: 25px" class="mb-3">
@@ -65,6 +78,9 @@
             </span>
             <label>Mark</label>
             <input type="number" required pattern="[1-5]{1}" th:field="*{mark}" placeholder="mark (*)" class="form-control"/>
+            <ul>
+                <li th:each="err : ${#fields.errors('mark')}" th:text="${err}" class="error" />
+            </ul>
         </div>
 
 
@@ -74,6 +90,8 @@
                 <a th:href="@{/marks}" class="btn btn-warning ">Cancel</a>
             </div>
         </div>
+
+
     </form>
 </div>
 </body>
